# oh-my-bookharness

./: AGENTS.md  README.md  pyproject.toml
book/: argument_map.md  audience_profile.md  blueprint.md  chapter_dependencies.yaml  concept_dictionary.yaml  decisions_log.md  publisher_formatting_guide.md  tone_guide.md  writing_rules.md
docs/: README.md  agent_pipeline.md  architecture.md  assistant_guide.md  backend.md  frontend.md  getting_started.md  operations.md  sources_guide.md
eval/reports/: ch01_continuity_v1.json  ch01_style_v1.json  ch01_technical_v1.json  ch02_continuity_v1.json  ch02_style_v1.json  ch02_technical_v1.json  ch03_continuity_v1.json  ch03_style_v1.json  ch03_technical_v1.json  ch04_continuity_v1.json  ch04_style_v1.json  ch04_technical_v1.json  ch05_continuity_v1.json  ch05_style_v1.json  ch05_technical_v1.json  ch06_continuity_v1.json  ch06_style_v1.json  ch06_technical_v1.json
eval/rubrics/: chapter_quality.yaml  continuity.yaml  source_quality.yaml  style_consistency.yaml
export/: ch01_draft_v7.docx  ch02_draft_v8.docx  ch03_draft_v5.docx  ch03_draft_v6.docx  ch04_draft_v5.docx  ch05_draft_v2.docx  ch06_draft_v2.docx
manuscript/ch01/: brief.md  change_log_v6.md  change_log_v7.md  draft_v1.md  draft_v2.md  draft_v3.md  draft_v5.md  draft_v6.md  draft_v7.md  (+10 more)
memory/: global_summary.md  recurring_examples.md  unresolved_questions.md
specs/: api_contract.md  repository_layout.md  state_machine.md  system_spec.md
tests/: conftest.py  mock_backend.py  test_agents.py  test_api.py  test_cli.py  test_review_system.py  test_summary_system.py
(+230 files in other folders)
