[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookharness"
version = "0.1.0"
description = "Deterministic, markdown-first workflow engine for semi-automated book authoring"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
llm = [
  "anthropic>=0.40.0",
]
dev = [
  "pytest>=8.0",
  "httpx>=0.27.0",
]

[project.scripts]
bookharness = "bookharness.cli:main"
bookharness-api = "bookharness_api.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
